# bid_optimisation

./: .env.example  .gitignore  Complete_Analysis.html  Complete_Analysis.md  FILE_STRUCTURE.md  README.md  download_bid_data.py
load_distribution/: .env.example  CLI_PARAMETERS.md  CLI_REFERENCE.md  DEMO_COMMANDS.md  OPTIMIZATION_PROBLEM.md  README.md  RESULTS_COMPARISON.md  pyproject.toml  test_scenarios.sh  test_schedule.csv
load_distribution/load_distribution/: __init__.py  __main__.py  cli.py  config.py  insights.py  models.py  optimizer.py
load_distribution/load_distribution/prompts/: insights_system.md
price_prediction/: .gitignore  DEMO_COMMANDS.md  README.md  download_bid_data.py  download_clearing_prices.py  pyproject.toml
price_prediction/evaluation/: ground_truth.csv  ground_truth_sample.csv  predictions_20260309_092033.csv  predictions_20260309_092144.csv  static_features.csv
price_prediction/evaluation/report/: EVALUATION_REPORT.md
price_prediction/models/price_predictor/: learner.pkl  predictor.pkl
price_prediction/models/price_predictor/logs/: predictor_log.txt
price_prediction/models/price_predictor/models/: cached_predictions.pkl  trainer.pkl
price_prediction/models/price_predictor/models/DeepAR/: model.pkl
price_prediction/models/price_predictor/models/DirectTabular/: model.pkl
price_prediction/models/price_predictor/models/RecursiveTabular/: model.pkl
price_prediction/price_prediction/: __init__.py  config.py  download_weather.py  evaluate.py  predict.py  prepare_data.py  render_mermaid.py  report_template.md  train.py
(+37 files in other folders)
