[project]
name = "load-distribution"
version = "0.1.0"
description = "Paper mill load optimization system for NZ electricity market"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.10.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "plotext>=5.3.0",
    "pulp>=3.3.0",
    "pydantic-ai>=0.0.14",
    "openai>=1.0.0",
    # Price prediction dependencies for integration
    "scikit-learn>=1.3",
    "autogluon.timeseries>=1.0",
    "holidays>=0.92",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
